# news_app

./: log_config.py  main.py  pyproject.toml
src/: config.py  news.py  save_to_json.py
